--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -32,6 +32,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/trip</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+	<servlet-name>RequestDB</servlet-name>
+		<servlet-class>com.rivendellcity.server.servlet.RequestRideServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RequestDB</servlet-name>
+		<url-pattern>/request</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
